optimize transition styles from markup

--- a/example/index.html
+++ b/example/index.html
@@ -26,14 +26,14 @@
             <img src="http://lorempixel.com/480/320/" alt="">
             </div>
             <br>
-            <div class="parallux-item" data-parallux-ratio="0.3" data-parallux-attr='{"margin-left":{"from":0.4,"to":100, "unit":"px"}}'>
+            <div class="parallux-item" data-parallux-ratio="0.3">
             <img src="http://lorempixel.com/320/280/" alt="">
           </div>
         </div>
         <div class="right">
           <article>
             <h1 class="parallux-item" data-parallux-ratio="0.3" data-parallux-attr='{"opacity":{"from":0,"to":1}}'>Lorem Ipsum</h1>
-            <p class="parallux-item" data-parallux-ratio="0.4" data-parallux-ratio-up="0.33" data-parallux-attr='{"lineHeight":{"from":2.44,"to":1.44}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
+            <p class="parallux-item" data-parallux-ratio="0.4" data-parallux-ratio-up="0.33">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
             <p class="parallux-item" data-parallux-ratio="0.6" data-parallux-ratio-up="0.36">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
           </article>
         </div>
@@ -45,14 +45,14 @@
       <!-- data-parallux-attr='{"lineHeight":{"from":4,"to":1.44}}' -->
 
         <p class="parallux-item" data-parallux-ratio="0.1" data-parallux-attr='{"opacity":{"from":0,"to":1}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis minus iusto magnam, eum? Magnam nihil cum illo, beatae quisquam sequi quos atque ea, minus dignissimos fugiat, nesciunt pariatur mollitia provident.</p>
-        <p class="parallux-item" data-parallux-ratio="0.2" data-parallux-attr='{"opacity":{"from":0.2,"to":1}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat voluptatem est aliquam, ipsa eum saepe at nemo nobis harum provident, amet vero consequuntur architecto eius accusantium porro dicta recusandae quidem!</p>
-        <p class="parallux-item" data-parallux-ratio="0.3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit fuga neque minus. Blanditiis vitae, maiores totam itaque odit sint nesciunt facere delectus excepturi amet nam magnam tempora labore, ducimus assumenda.</p>
+        <p class="parallux-item" data-parallux-ratio="0.2" data-parallux-ratio-up="0.12" data-parallux-attr='{"opacity":{"from":0.2,"to":1}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat voluptatem est aliquam, ipsa eum saepe at nemo nobis harum provident, amet vero consequuntur architecto eius accusantium porro dicta recusandae quidem!</p>
+        <p class="parallux-item" data-parallux-ratio="0.3" data-parallux-ratio-up="0.14">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit fuga neque minus. Blanditiis vitae, maiores totam itaque odit sint nesciunt facere delectus excepturi amet nam magnam tempora labore, ducimus assumenda.</p>
 
       </div>
       <div class="right">
 
-      <h1 class="parallux-item" data-parallux-ratio="0.6" data-parallux-attr='{"transform":{"prop":"translateZ", "from":-200,"to":0, "unit":"px"}}'>Lorem Ipsum</h1>
-      <div class="parallux-item" data-parallux-ratio="0.65" data-parallux-ratio-up="0.33"  data-parallux-attr='{"transform":{"prop":"rotate", "from":20,"to":0, "unit":"deg"}}'>
+      <h1 class="parallux-item" data-parallux-ratio="0.6" data-parallux-attr='{"transform":{"translateZ" : {"from":-200,"to":0, "unit":"px"}}}'>Lorem Ipsum</h1>
+      <div class="parallux-item" data-parallux-ratio="0.65" data-parallux-ratio-up="0.33"  data-parallux-attr='{"transform":{"rotate" : {"from":20,"to":0, "unit":"deg"}, "translateZ" : {"from":-320,"to":0, "unit":"px"}}}'>
         <img src="http://lorempixel.com/800/460/" alt="">
       </div>
       <div class="parallux-item" data-parallux-ratio="0.69" data-parallux-ratio-up="0.33" >
@@ -63,7 +63,7 @@
 
     <section class="parallux-container block dark">
       <div class="right">
-        <div class="parallux-item" data-parallux-ratio="0.1">
+        <div class="parallux-item" data-parallux-ratio="0.1" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{ "translateZ" : {"from":100,"to":0, "unit":"px"}, "rotateY" : {"from":180,"to":0, "unit":"deg"}}}'>
           <img src="http://lorempixel.com/480/320/" alt="">
           </div>
           <div class="parallux-item" data-parallux-ratio="0.2">
@@ -81,15 +81,15 @@
     </section>
     <footer class="parallux-container block">
 
-      <p class="parallux-item" data-parallux-ratio="0.1" data-parallux-ratio-up="0.1" data-parallux-attr='{"transform":{"prop":"scale", "from":0.9,"to":1}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo modi deleniti molestias, iste, eum esse. Pariatur quis suscipit tempore, facilis vero incidunt laboriosam quibusdam, quam, possimus animi modi earum aspernatur.</p>
-      <p class="parallux-item" data-parallux-ratio="0.3" data-parallux-ratio-up="0.12" data-parallux-attr='{"transform":{"prop":"scale", "from":0.8,"to":1}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus sunt, possimus tempora atque officia itaque quibusdam amet sapiente laboriosam hic libero quos voluptatibus aperiam corporis, nisi a delectus alias. Consequatur!</p>
-      <p class="parallux-item" data-parallux-ratio="0.6" data-parallux-ratio-up="0.13" data-parallux-attr='{"transform":{"prop":"scale", "from":0.7,"to":1}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, hic doloribus dolorem veniam praesentium possimus officiis cum distinctio eius, ipsam aliquid recusandae, magnam vel quidem nesciunt pariatur! Perferendis, natus, impedit.</p>
-      <p class="parallux-item" data-parallux-ratio="0.8" data-parallux-ratio-up="0.14" data-parallux-attr='{"transform":{"prop":"scale", "from":0.6,"to":1}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut rerum, fugit. Quae odio autem, voluptatum! Aspernatur deleniti, quia et officia quo, quidem libero praesentium rerum velit facere deserunt perferendis accusantium?</p>
-      <p class="parallux-item" data-parallux-ratio="1" data-parallux-ratio-up="0.15" data-parallux-attr='{"transform":{"prop":"scale", "from":0.5,"to":1}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem aliquid praesentium cumque sit vero, ducimus atque et. Atque voluptate, dicta nihil obcaecati quo iusto aliquam nam perferendis nemo illum.</p>
-      <p class="parallux-item" data-parallux-ratio="1.2" data-parallux-ratio-up="0.16" data-parallux-attr='{"transform":{"prop":"scale", "from":0.6,"to":1}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem aliquid praesentium cumque sit vero, ducimus atque et. Atque voluptate, dicta nihil obcaecati quo iusto aliquam nam perferendis nemo illum.</p>
-      <p class="parallux-item" data-parallux-ratio="1.4" data-parallux-ratio-up="0.17" data-parallux-attr='{"transform":{"prop":"scale", "from":0.7,"to":1}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem aliquid praesentium cumque sit vero, ducimus atque et. Atque voluptate, dicta nihil obcaecati quo iusto aliquam nam perferendis nemo illum.</p>
-      <p class="parallux-item" data-parallux-ratio="1.6" data-parallux-ratio-up="0.18" data-parallux-attr='{"transform":{"prop":"scale", "from":0.8,"to":1}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem aliquid praesentium cumque sit vero, ducimus atque et. Atque voluptate, dicta nihil obcaecati quo iusto aliquam nam perferendis nemo illum.</p>
-      <p class="parallux-item" data-parallux-ratio="1.8" data-parallux-ratio-up="0.19" data-parallux-attr='{"transform":{"prop":"scale", "from":0.9,"to":1}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem aliquid praesentium cumque sit vero, ducimus atque et. Atque voluptate, dicta nihil obcaecati quo iusto aliquam nam perferendis nemo illum.</p>
+      <p class="parallux-item" data-parallux-ratio="0.1" data-parallux-ratio-up="0.1" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.9,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo modi deleniti molestias, iste, eum esse. Pariatur quis suscipit tempore, facilis vero incidunt laboriosam quibusdam, quam, possimus animi modi earum aspernatur.</p>
+      <p class="parallux-item" data-parallux-ratio="0.3" data-parallux-ratio-up="0.12" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.8,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus sunt, possimus tempora atque officia itaque quibusdam amet sapiente laboriosam hic libero quos voluptatibus aperiam corporis, nisi a delectus alias. Consequatur!</p>
+      <p class="parallux-item" data-parallux-ratio="0.6" data-parallux-ratio-up="0.13" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.7,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, hic doloribus dolorem veniam praesentium possimus officiis cum distinctio eius, ipsam aliquid recusandae, magnam vel quidem nesciunt pariatur! Perferendis, natus, impedit.</p>
+      <p class="parallux-item" data-parallux-ratio="0.8" data-parallux-ratio-up="0.14" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.6,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut rerum, fugit. Quae odio autem, voluptatum! Aspernatur deleniti, quia et officia quo, quidem libero praesentium rerum velit facere deserunt perferendis accusantium?</p>
+      <p class="parallux-item" data-parallux-ratio="1" data-parallux-ratio-up="0.15" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.5,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem aliquid praesentium cumque sit vero, ducimus atque et. Atque voluptate, dicta nihil obcaecati quo iusto aliquam nam perferendis nemo illum.</p>
+      <p class="parallux-item" data-parallux-ratio="1.2" data-parallux-ratio-up="0.16" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.6,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem aliquid praesentium cumque sit vero, ducimus atque et. Atque voluptate, dicta nihil obcaecati quo iusto aliquam nam perferendis nemo illum.</p>
+      <p class="parallux-item" data-parallux-ratio="1.4" data-parallux-ratio-up="0.17" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.7,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem aliquid praesentium cumque sit vero, ducimus atque et. Atque voluptate, dicta nihil obcaecati quo iusto aliquam nam perferendis nemo illum.</p>
+      <p class="parallux-item" data-parallux-ratio="1.6" data-parallux-ratio-up="0.18" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.8,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem aliquid praesentium cumque sit vero, ducimus atque et. Atque voluptate, dicta nihil obcaecati quo iusto aliquam nam perferendis nemo illum.</p>
+      <p class="parallux-item" data-parallux-ratio="1.8" data-parallux-ratio-up="0.19" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.9,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem aliquid praesentium cumque sit vero, ducimus atque et. Atque voluptate, dicta nihil obcaecati quo iusto aliquam nam perferendis nemo illum.</p>
 
     </footer>
 
