--- a/example/index.html
+++ b/example/index.html
@@ -22,7 +22,7 @@
     <section class="parallux-container blue">
       <div class="block">
         <div class="left">
-          <div class="parallux-item" data-parallux-ratio="0.1" data-parallux-attr='{"opacity":{"from":0.4,"to":1}}'>
+          <div class="parallux-item" data-parallux-ratio="0.1" data-parallux-attr='{"opacity":{"from":0.2,"to":0.8}}'>
             <img src="http://lorempixel.com/480/320/" alt="">
             </div>
             <br>
@@ -40,6 +40,7 @@
       </div>
     </section>
 
+
     <section class="parallux-container block orange">
     <div class="left">
       <!-- data-parallux-attr='{"lineHeight":{"from":4,"to":1.44}}' -->
@@ -52,21 +53,21 @@
       <div class="right">
 
       <h1 class="parallux-item" data-parallux-ratio="0.6" data-parallux-attr='{"transform":{"translateZ" : {"from":-200,"to":0, "unit":"px"}}}'>Lorem Ipsum</h1>
-      <div class="parallux-item" data-parallux-ratio="0.65" data-parallux-ratio-up="0.33"  data-parallux-attr='{"transform":{"rotate" : {"from":20,"to":0, "unit":"deg"}, "translateZ" : {"from":-320,"to":0, "unit":"px"}}}'>
+      <div class="parallux-item" data-parallux-ratio="0.65" data-parallux-ratio-up="0.33"  data-parallux-attr='{"transform":{"rotate" : {"from":20,"to":0, "unit":"deg"}, "translateZ" : {"from":-320, "unit":"px"}}}'>
         <img src="http://lorempixel.com/800/460/" alt="">
       </div>
       <div class="parallux-item" data-parallux-ratio="0.69" data-parallux-ratio-up="0.33" >
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat ea ad vero exercitationem, sit maiores ipsa nam doloribus quae similique alias voluptas itaque quidem, culpa debitis modi eius, rerum. Hic!</p>
        </div>
-      </div>
+        </div>
     </section>
 
     <section class="parallux-container block dark">
       <div class="right">
-        <div class="parallux-item" data-parallux-ratio="0.1" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{ "translateZ" : {"from":100,"to":0, "unit":"px"}, "rotateY" : {"from":180,"to":0, "unit":"deg"}}}'>
+        <div class="parallux-item" data-parallux-ratio="0.1" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{ "translateZ" : {"from":100, "unit":"px"}, "rotateY" : {"from":180, "unit":"deg"}}}'>
           <img src="http://lorempixel.com/480/320/" alt="">
           </div>
-          <div class="parallux-item" data-parallux-ratio="0.2">
+          <div class="parallux-item" data-parallux-ratio="0.2"  data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{ "translateZ" : {"from":-600, "to":0, "unit":"px"}, "rotateY" : {"from":-200, "to":0, "unit":"deg"}}}'>
           <img src="http://lorempixel.com/320/180/" alt="">
         </div>
       </div>
