--- a/example/index.html
+++ b/example/index.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+
+  <div class="parallux-container fixed">
+    <div class="parallux-item background-1" data-parallux-ratio="0.3" ></div>
+    <div class="parallux-item background-2" data-parallux-ratio="0.2" ></div>
+    <div class="parallux-item background-3" data-parallux-ratio="0.1" ></div>
+  </div>
+
   <div class="page">
 
     <header class="parallux-container header">
@@ -26,7 +33,7 @@
             <img src="http://lorempixel.com/480/320/" alt="">
             </div>
             <br>
-            <div class="parallux-item" data-parallux-ratio="0.3">
+            <div class="parallux-item" data-parallux-ratio="0.3" data-parallux-attr='{"transform":{"scale": {"from":0.1,"to":1.5}}}'>
             <img src="http://lorempixel.com/320/280/" alt="">
           </div>
         </div>
@@ -67,7 +74,7 @@
         <div class="parallux-item" data-parallux-ratio="0.1" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{ "translateZ" : {"from":100, "unit":"px"}, "rotateY" : {"from":180, "unit":"deg"}}}'>
           <img src="http://lorempixel.com/480/320/" alt="">
           </div>
-          <div class="parallux-item" data-parallux-ratio="0.2"  data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{ "translateZ" : {"from":-600, "to":0, "unit":"px"}, "rotateY" : {"from":-200, "to":0, "unit":"deg"}}}'>
+          <div class="parallux-item" data-parallux-ratio="0.2"  data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{ "translateZ" : {"from":-600, "to":100, "unit":"px"}, "rotateY" : {"from":-200, "to":10, "unit":"deg"}}}'>
           <img src="http://lorempixel.com/320/180/" alt="">
         </div>
       </div>
