update onload && enhance demo

--- a/example/index.html
+++ b/example/index.html
@@ -20,8 +20,9 @@
   <div class="page">
 
     <header class="parallux-container header">
-      <div class="block">
+
         <h1 class="parallux-item" data-parallux-ratio="-0.4">Parallux</h1>
+        <div class="block">
         <p class="parallux-item" data-parallux-ratio="-0.3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam quis vero commodi voluptates assumenda minima nesciunt pariatur deserunt harum expedita, optio cupiditate temporibus sit itaque, at illo quibusdam repellendus labore.</p>
       </div>
     </header>
@@ -48,13 +49,14 @@
     </section>
 
 
-    <section class="parallux-container block orange">
+    <section class="parallux-container  orange">
+    <div class="block">
     <div class="left">
       <!-- data-parallux-attr='{"lineHeight":{"from":4,"to":1.44}}' -->
 
         <p class="parallux-item" data-parallux-ratio="0.1" data-parallux-attr='{"opacity":{"from":0,"to":1}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis minus iusto magnam, eum? Magnam nihil cum illo, beatae quisquam sequi quos atque ea, minus dignissimos fugiat, nesciunt pariatur mollitia provident.</p>
-        <p class="parallux-item" data-parallux-ratio="0.2" data-parallux-ratio-up="0.12" data-parallux-attr='{"opacity":{"from":0.2,"to":1}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat voluptatem est aliquam, ipsa eum saepe at nemo nobis harum provident, amet vero consequuntur architecto eius accusantium porro dicta recusandae quidem!</p>
-        <p class="parallux-item" data-parallux-ratio="0.3" data-parallux-ratio-up="0.14">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit fuga neque minus. Blanditiis vitae, maiores totam itaque odit sint nesciunt facere delectus excepturi amet nam magnam tempora labore, ducimus assumenda.</p>
+        <p class="parallux-item" data-parallux-ratio="0.4" data-parallux-ratio-up="0.12" data-parallux-attr='{"opacity":{"from":0.2,"to":1}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat voluptatem est aliquam, ipsa eum saepe at nemo nobis harum provident, amet vero consequuntur architecto eius accusantium porro dicta recusandae quidem!</p>
+        <p class="parallux-item" data-parallux-ratio="0.6" data-parallux-ratio-up="0.14">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit fuga neque minus. Blanditiis vitae, maiores totam itaque odit sint nesciunt facere delectus excepturi amet nam magnam tempora labore, ducimus assumenda.</p>
 
       </div>
       <div class="right">
@@ -67,9 +69,11 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat ea ad vero exercitationem, sit maiores ipsa nam doloribus quae similique alias voluptas itaque quidem, culpa debitis modi eius, rerum. Hic!</p>
        </div>
         </div>
+      </div>
     </section>
 
-    <section class="parallux-container block dark">
+    <section class="parallux-container  dark">
+      <div class="block">
       <div class="right">
         <div class="parallux-item" data-parallux-ratio="0.1" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{ "translateZ" : {"from":100, "unit":"px"}, "rotateY" : {"from":180, "unit":"deg"}}}'>
           <img src="http://lorempixel.com/480/320/" alt="">
@@ -84,6 +88,7 @@
           <p class="parallux-item" data-parallux-ratio="0.15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
           <p class="parallux-item" data-parallux-ratio="0.2" data-parallux-ratio-up="0.1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
         </article>
+        </div>
       </div>
 
     </section>
