--- a/example/index.html
+++ b/example/index.html
@@ -27,7 +27,7 @@
       </div>
     </header>
 
-    <section class="parallux-container blue">
+    <section class="parallux-container blue" data-parallux-pov="0.5">
       <div class="block">
         <div class="left">
           <div class="parallux-item" data-parallux-ratio="0.1" data-parallux-attr='{"opacity":{"from":0.2,"to":0.8}}'>
@@ -41,8 +41,8 @@
         <div class="right">
           <article>
             <h1 class="parallux-item" data-parallux-ratio="0.3" data-parallux-attr='{"opacity":{"from":0,"to":1}}'>Lorem Ipsum</h1>
-            <p class="parallux-item" data-parallux-ratio="0.4" data-parallux-ratio-up="0.33">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
-            <p class="parallux-item" data-parallux-ratio="0.6" data-parallux-ratio-up="0.36">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
+            <p class="parallux-item" data-parallux-ratio="0.5" data-parallux-ratio-up="0.33">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
+            <p class="parallux-item" data-parallux-ratio="0.8" data-parallux-ratio-up="0.36">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
           </article>
         </div>
       </div>
